removed the unsupported commandline arg for JVM