@@ -22,7 +22,7 @@
         <headless>true</headless>
         <driverType>local</driverType>
         <surefire.version>3.5.2</surefire.version>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
@@ -145,7 +145,6 @@
                                 <headless>${headless}</headless>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
@@ -176,7 +175,6 @@
                                 <headless>${headless}</headless>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
@@ -199,7 +197,6 @@
                                 <env>${env.dev}</env>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>./src/test/resources/testng_api_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
@@ -222,7 +219,6 @@
                                 <env>${env.qa}</env>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>./src/test/resources/testng_api_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
@@ -258,7 +254,6 @@
                                 <headless>${headless}</headless>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
@@ -294,7 +289,6 @@
                                 <headless>${headless}</headless>
                             </systemPropertyVariables>
                             <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>./src/test/resources/testng_functional_suite.xml</suiteXmlFile>
                             </suiteXmlFiles>
